--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,14 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.glass {
+    height: 250px;
+    width: 200px;
+    border: 1px solid blue;
+    margin: 5px auto;
+    clip-path: polygon(15% 0, 85% 0, 70% 100%, 28% 100%);
+    display: flex;
+    flex-direction: column-reverse;
+}
+.filled {
+    height: 12.5%;
+    width: 100%;
+    background: blue;
+}
